# computer_graphics-Pathtrace

./: CMakeLists.txt  README.md  notes.htm  pathtrace.vcxproj
pathtrace.xcodeproj/: project.pbxproj
pathtrace.xcodeproj/project.xcworkspace/xcuserdata/fscozzafava.xcuserdatad/: UserInterfaceState.xcuserstate
pathtrace.xcodeproj/xcuserdata/fscozzafava.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
pathtrace.xcodeproj/xcuserdata/fscozzafava.xcuserdatad/xcschemes/: pathtrace.xcscheme  xcschememanagement.plist
src/: animation.cpp  animation.h  intersect.cpp  intersect.h  montecarlo.h  pathtrace.cpp  scene.cpp  scene.h  tesselation.cpp  vmath.h  yocto_obj.h
tests/: 01_textured.json  02_area.json  03_env.json  03_env_1.json  04_light.json  05_materials.json  06_cb_direct.json  07_cb_indirect.json  08_area_dof.json  09_plane_dof.json  09_plane_dof_circle.json  10_area_reflection.json  10_area_reflection_blur.json  11_light_reflection_blur.json  12_buddha.json  13_cylinder.json  14_hair.json  15_monkey_motionblur.json  15_monkey_motionblur_1.json  16_suzanne_hair.json  17_head.json  17_head_subsurface.json  18_translucency.json  18_translucency_1.json  18_translucency_2.json  19_sibenik.json  20_translucency_rubber.json  20_translucency_rubber_1.json  21_candle.json  run.bat  run.sh  run_all.sh
tests/models/: candle_body.mtl  candle_light.mtl  cornell-box-edited.json  cornell-box-edited_1.json  cornell-box.json  millenium_falcon_fixed.mtl  monkey_rot_subdiv.json  tespose.mtl
tests/models/head/: head_hair.json
